# vid-tools

./: .gitignore  CLAUDE.md  README.md  bubble_cleanup.py  clean_green.py  cut_segments.sh  despill_green.py  frames_to_video.py  gen_qr.py  pyproject.toml  remove_bg.py  test_transparency.py  upscale-and-remove-bg.md  video_looper.py  video_remove_bg.py  video_slowmo_loop.py
